8thSept2026/volAssignment/force-app/main/default/objects/Event__c/fields/Primary_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Category__c</fullName>
    <label>Primary Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Student_Categories</valueSetName>
    </valueSet>
</CustomField>