8thSept2026/volAssignment/force-app/main/default/objects/Event__c/fields/Required_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Required_Student_Count__c</fullName>
    <label>Required Student Count</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>