8thSept2026/volAssignment/force-app/main/default/objects/Event__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Work_Type</valueSetName>
    </valueSet>
</CustomField>